# kumo-router-label-manager

./: .env.example  .gitattributes  .gitignore  Deploy-Helix-Package.ps1  Deploy-KUMO-Package.ps1  FIXES_SUMMARY.md  Helix-Excel-Updater.ps1  Helix-Label-Manager.ps1  Helix-Menu.bat  Helix-Setup-Guide.md  Helix-Shared.psm1  Helix_Labels_Template.csv  Install-Helix-Tools.ps1  Install-KUMO-Tools.ps1  KUMO-Excel-Updater.ps1  KUMO-Label-Manager.ps1  KUMO-Menu.bat  KUMO-Shared.psm1  PYTHON_SETUP.md  README.md  VERSION.md  blast.sh  blast2.sh  error-log.txt  error.txt  installer.iss  kumo_6464_labels.csv  pyproject.toml  requirements.txt  test.presets
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/plans/: 2026-02-27-blackmagic-videohub-support-design.md  2026-02-27-lightware-mx2-implementation.md  2026-02-27-lightware-mx2-support-design.md  2026-02-27-universal-matrix-design.md  2026-02-27-universal-matrix-implementation.md  2026-03-03-v5-audit-test-package-design.md
electron/: .gitignore  electron-builder.yml  package-lock.json  package.json  tailwind.config.js  tsconfig.json
electron/resources/templates/: Helix_16x16_Template.xlsx  Helix_20x20_Template.xlsx  Helix_24x24_Template.xlsx  Helix_32x32_Template.xlsx  Helix_40x40_Template.xlsx  Helix_64x64_Template.xlsx  Helix_8x8_Template.xlsx
electron/scripts/: generate-templates.ts
electron/src/main/: index.ts  ipc-handlers.ts  menu.ts  settings-store.ts
electron/src/main/file-io/: csv-handler.ts  excel-handler.ts  file-agent.ts  json-handler.ts
electron/src/main/protocols/: auto-detect.ts  kumo-rest.ts  kumo-telnet.ts  lightware.ts  network-scanner.ts  router-agent.ts  types.ts  videohub.ts
electron/src/main/utils/: errors.ts  validation.ts
electron/src/preload/: index.ts
electron/src/renderer/: App.tsx  index.css  index.html
electron/src/renderer/components/dialogs/: About.tsx  AutoNumber.tsx  BulkOps.tsx  FindReplace.tsx  Settings.tsx  Statistics.tsx
electron/src/renderer/components/labels/: LabelTable.tsx
electron/src/renderer/components/layout/: Sidebar.tsx  StatusBar.tsx
electron/src/renderer/components/matrix/: CrosspointMatrix.tsx
electron/src/renderer/components/router/: ConnectDialog.tsx  ScanDialog.tsx
electron/src/renderer/hooks/: useIpc.ts  useLabels.ts  useRouter.ts
electron/src/renderer/stores/: labels-store.ts  router-store.ts  ui-store.ts
electron/src/renderer/theme/: colors.ts
electron/src/renderer/types/: global.d.ts
src/: __init__.py  cli.py
src/agents/: __init__.py  base_agent.py
src/agents/api_agent/: __init__.py  lightware_protocol.py  rest_client.py  router_protocols.py  telnet_client.py  videohub_protocol.py
src/agents/file_handler/: __init__.py  csv_handler.py  excel_handler.py  json_handler.py  schema.py
src/config/: __init__.py  settings.py
src/coordinator/: __init__.py  event_bus.py
src/models/: __init__.py  events.py  label.py  router.py
src/utils/: __init__.py  exceptions.py  validation.py
tests/: conftest.py  test_api_agent.py  test_colors.py  test_event_bus.py  test_excel_roundtrip.py  test_file_handlers.py  test_models.py  test_rest_client.py  test_router_protocols.py  test_telnet_client.py  test_videohub_protocol.py
